Fixed issue with header spacing

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -4,14 +4,8 @@
 	padding: 0;
 }
 
-.header .logo
-{
-	display: block;
-}
-
-.header .logo img 
-{
-	padding-bottom: 40px;
+.header .container {
+	margin-bottom: 0;
 }
 
 .posts .dl-horizontal dd {
